# AppSecureGuard

./: README.md  settings.gradle.kts
SecureGuard/: build.gradle.kts  consumer-rules.pro
SecureGuard/src/main/cpp/: CMakeLists.txt  secureguard.cpp
SecureGuard/src/main/cpp/common/: utils.c  utils.h
SecureGuard/src/main/cpp/core/: anti_debug.c  anti_debug.h  anti_frida.c  anti_root.c
SecureGuard/src/main/cpp/jni/: guard.c
SecureGuard/src/main/cpp/security/: emulator_check.c  emulator_check.h  frida_check.c  frida_check.h  magisk_check.c  magisk_check.h  mitm_check.c  mitm_check.h  root_check.c  root_check.h  xposed_check.c  xposed_check.h
SecureGuard/src/main/java/com/padmakar/secureguard/: AppProtectGuard.kt  SecurityAlertBottomSheet.kt
SecureGuard/src/main/res/drawable/: bg_security_bottomsheet.xml
SecureGuard/src/main/res/layout/: bottomsheet_security_alert.xml
app/: build.gradle.kts  jitpack.yml
app/src/main/java/com/padmakar/appprotectionguard/: MainActivity.kt
